--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,16 @@
   },
   "license": "MIT",
   "require-dev": {
-    "phpstan/phpstan": "^0.10.3",
-    "friendsofphp/php-cs-fixer": "3.0.x-dev"
+    "phpstan/phpstan": "^0.10.5",
+    "symplify/easy-coding-standard": "^5.1"
+  },
+  "scripts": {
+    "complete-check": [
+      "@check-cs",
+      "@phpstan"
+    ],
+    "check-cs": "vendor/bin/ecs check src",
+    "fix-cs": "vendor/bin/ecs check src --fix",
+    "phpstan": "vendor/bin/phpstan analyse src --level max"
   }
 }
