--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,10 @@
     "check-cs": "ecs check src",
     "fix-cs": "ecs check src --fix",
     "phpstan": "phpstan analyse src --level max"
+  },
+  "extra": {
+    "branch-alias": {
+      "php70-compatibility": "0.0.1"
+    }
   }
 }
