--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "php": ">= 7.2",
     "tracy/tracy": "^2.6",
     "ext-json": "*",
-    "nette/utils": "^2.5.3"
+    "nette/utils": "^2.5.8|^3.0"
   },
   "license": "MIT",
   "require-dev": {
