--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     "php": ">= 7.2",
     "tracy/tracy": "^2.6",
     "ext-json": "*",
-    "nette/utils": "^2.5.8|^3.0"
+    "nette/utils": "^3.0"
   },
   "license": "MIT",
   "require-dev": {
     "phpstan/phpstan": "^0.11",
-    "symplify/easy-coding-standard": "^5.4"
+    "symplify/easy-coding-standard": "^6.0"
   },
   "scripts": {
     "check": [
